--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-libc = "0.2"
+libc = { version = "0.2", features = ["extra_traits"] }
 thiserror = "1"
 object = "0.23"
 bytes = "1"
