--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -10,6 +10,7 @@ thiserror = "1"
 object = "0.23"
 bytes = "1"
 lazy_static = "1"
+parking_lot = { version = "0.11.1", features = ["send_guard"] }
 
 [dev-dependencies]
 matches = "0.1.8"
