--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -11,6 +11,16 @@ object = "0.23"
 bytes = "1"
 lazy_static = "1"
 parking_lot = { version = "0.11.1", features = ["send_guard"] }
+futures = "0.3.12"
+tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net"], optional = true }
+async-std = { version = "1.9.0", optional = true }
+async-io = { version = "1.3", optional = true }
 
 [dev-dependencies]
 matches = "0.1.8"
+
+[features]
+default = []
+async = []
+async_tokio = ["tokio", "async"]
+async_std = ["async-std", "async-io", "async"]
