--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -11,7 +11,7 @@ object = "0.23"
 bytes = "1"
 lazy_static = "1"
 parking_lot = { version = "0.11.1", features = ["send_guard"] }
-futures = "0.3.12"
+futures = { version = "0.3.12", optional = true }
 tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net"], optional = true }
 async-std = { version = "1.9.0", optional = true }
 async-io = { version = "1.3", optional = true }
@@ -21,6 +21,6 @@ matches = "0.1.8"
 
 [features]
 default = []
-async = []
+async = ["futures"]
 async_tokio = ["tokio", "async"]
 async_std = ["async-std", "async-io", "async"]
