--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 libc = { version = "0.2" }
 thiserror = "1"
 object = { version = "0.23", default-features = false, features = ["std", "read_core", "elf"] }
+bitflags = "1.2.1"
 bytes = "1"
 lazy_static = "1"
 parking_lot = { version = "0.11.1", features = ["send_guard"] }
