--- a/bpf/aya-bpf-bindings/Cargo.toml
+++ b/bpf/aya-bpf-bindings/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "aya-bpf"
+name = "aya-bpf-bindings"
 version = "0.1.0"
 authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 aya-bpf-cty = { path = "../aya-bpf-cty" }
-aya-bpf-macros = { path = "../aya-bpf-macros" }
-aya-bpf-bindings = { path = "../aya-bpf-bindings" }
+
