xtask: rework code generator for bpf helpers

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 aya-gen = { path = "../aya-gen" }
 structopt = {version = "0.3", default-features = false }
 anyhow = "1"
-syn = {version = "1", features = ["visit-mut", "extra-traits"] }
+syn = "1"
 quote = "1"
 proc-macro2 = "1"
 indexmap = "1.6"
