--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -34,4 +34,4 @@ jobs:
         run: cargo build --verbose
 
       - name: Run tests
-        run: RUST_BACKTRACE=full cargo test --verbose --tests
+        run: RUST_BACKTRACE=full cargo test --verbose
