--- a/.cargo/config
+++ b/.cargo/config
@@ -3,3 +3,6 @@ xtask = "run --package xtask --"
 
 [target.armv7-unknown-linux-gnueabi]
 linker = "arm-linux-gnueabi-gcc"
+
+[target.armv7-unknown-linux-gnueabihf]
+linker = "arm-linux-gnueabihf-gcc"
