aya: update authors and repository link

--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.10.3"
 description = "An eBPF library with a focus on developer experience and operability."
 keywords = ["ebpf", "bpf", "linux", "kernel"]
 license = "MIT OR Apache-2.0"
-authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
-repository = "https://github.com/alessandrod/aya"
+authors = ["The Aya Contributors"]
+repository = "https://github.com/aya-rs/aya"
 readme = "README.md"
 documentation = "https://docs.rs/aya"
 edition = "2018"
