miri: Disable Stacked Borrows and skip some tests
The perf_buffer code fails due to stacked borrows, skip this for now.
munmap isn't supported by miri.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,6 +44,8 @@ jobs:
           popd
 
       - name: Run miri
+        env:
+          MIRIFLAGS: -Zmiri-disable-stacked-borrows
         run: |
           cargo miri test
           pushd bpf
