--- a/aya-log-common/Cargo.toml
+++ b/aya-log-common/Cargo.toml
@@ -8,7 +8,7 @@ default = []
 userspace = [ "aya" ]
 
 [dependencies]
-aya = { git = "https://github.com/aya-rs/aya", branch="main", optional=true }
+aya = { version = "0.10.5", optional=true }
 
 [lib]
 path = "src/lib.rs"
