--- a/aya-log/aya-log/Cargo.toml
+++ b/aya-log/aya-log/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2018"
 publish = false
 
 [dependencies]
-aya = { git = "https://github.com/aya-rs/aya", branch="main", features=["async_tokio"] }
-aya-log-common = { path = "../aya-log-common", features=["userspace"] }
+aya = { version = "0.10.5", features=["async_tokio"] }
+aya-log-common = { version = "0.1", path = "../aya-log-common", features=["userspace"] }
 thiserror = "1"
 log = "0.4"
 bytes = "1.1"
