--- a/aya-log-common/Cargo.toml
+++ b/aya-log-common/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "aya-log-common"
 version = "0.1.1"
+description = "A logging library for eBPF programs."
+keywords = ["ebpf", "bpf", "log", "logging"]
+license = "MIT OR Apache-2.0"
+authors = ["The Aya Contributors"]
+repository = "https://github.com/aya-rs/aya-log"
+documentation = "https://docs.rs/aya-log"
 edition = "2018"
 
 [features]
