--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -16,3 +16,4 @@ rbpf = "0.2.0"
 regex = "1"
 tempfile = "3.3.0"
 tokio = { version = "1.24", features = ["rt", "rt-multi-thread", "sync", "time"] }
+rand = { version = "0.8.5" }
