aya-bpf-macros: fix tests
Doctests were failing due to a dependency on the aya-bpf crate.

--- a/bpf/aya-bpf-macros/Cargo.toml
+++ b/bpf/aya-bpf-macros/Cargo.toml
@@ -11,3 +11,6 @@ proc-macro = true
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = {version = "1.0", features = ["full"]}
+
+[dev-dependencies]
+aya-bpf = { path = "../aya-bpf" }
