--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -22,6 +22,7 @@ futures = { version = "0.3.12", optional = true, default-features = false, featu
 tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net"], optional = true }
 async-std = { version = "1.9.0", optional = true }
 async-io = { version = "1.3", optional = true }
+log = "0.4"
 
 [dev-dependencies]
 matches = "0.1.8"
