--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -42,7 +42,7 @@ jobs:
           commit_prefix: "[codegen] Update libbpf to ${{ env.LIBBPF_SHA }}"
           commit_message: "Update libbpf to ${{ env.LIBBPF_SHA }}"
           target_branch: codegen
-
+          force: true
 
       - name: Create pull request
         if: steps.commit.outputs.files_changed != ''
