--- a/.github/workflows/build-aya-bpf.yml
+++ b/.github/workflows/build-aya-bpf.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: Swatinem/rust-cache@v1
 
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --manifest-path bpf/Cargo.toml --verbose
 
       - name: Run tests
-        run: RUST_BACKTRACE=full cargo test --verbose
+        run: RUST_BACKTRACE=full cargo test --manifest-path bpf/Cargo.toml --verbose
