--- a/aya-log/aya-log/Cargo.toml
+++ b/aya-log/aya-log/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 [dependencies]
 aya = { version = "0.10.5", features=["async_tokio"] }
 aya-log-common = { version = "0.1", path = "../aya-log-common", features=["userspace"] }
+dyn-fmt = "0.3.0"
 thiserror = "1"
 log = "0.4"
 bytes = "1.1"
