--- a/ebpf/aya-log-ebpf/Cargo.toml
+++ b/ebpf/aya-log-ebpf/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2018"
 
 [dependencies]
 aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
-aya-log-common = { path = "../aya-log-common" }
-ufmt = { version = "0.1", package = "aya-ufmt" }
+aya-log-common = { path = "../../aya-log-common" }
+aya-log-ebpf-macros = { path = "../aya-log-ebpf-macros" }
 
 [lib]
 path = "src/lib.rs"
@@ -19,6 +19,3 @@ overflow-checks = false
 
 [profile.release]
 panic = "abort"
-
-[workspace]
-members = []
