Add riscv64 architecture support to xtask/codegen

--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install headers
         run: |
           sudo apt -y update
-          sudo apt -y install libc6-dev libc6-dev-{arm64,armel}-cross
+          sudo apt -y install libc6-dev libc6-dev-{arm64,armel,riscv64}-cross
 
       - name: Run codegen
         run: |
