.github: use nightly for codegen
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -18,6 +18,11 @@ jobs:
         working-directory: libbpf
         run: echo "LIBBPF_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+
       - uses: Swatinem/rust-cache@v1
 
       - name: Install headers
