.github: gen - add rustfmt to toolchain

--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -20,7 +20,9 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: nightly
+          components: rustfmt, clippy
           override: true
 
       - uses: Swatinem/rust-cache@v1
