aya: Export BTF crate
Allows users to inspect program BTF for metadata.
Allows additional use cases for users who wish only to deal with BTF
parsing.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,11 +36,11 @@ jobs:
 
       - name: Run clippy
         run: |
-          cargo clippy -p aya -- --deny warnings
-          cargo clippy -p aya-gen -- --deny warnings
-          cargo clippy -p xtask -- --deny warnings
+          cargo clippy --all-features -p aya -- --deny warnings
+          cargo clippy --all-features -p aya-gen -- --deny warnings
+          cargo clippy --all-features -p xtask -- --deny warnings
           pushd bpf
-          cargo clippy -p aya-bpf -- --deny warnings
+          cargo clippy --all-features -p aya-bpf -- --deny warnings
           popd
 
       - name: Run miri
