--- a/aya-gen/Cargo.toml
+++ b/aya-gen/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 bindgen = "0.60"
-structopt = {version = "0.3", default-features = false }
+clap = { version = "3", features = ["derive"] }
 anyhow = "1"
 thiserror = "1"
 syn = "1"
