--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 aya-gen = { path = "../aya-gen" }
-structopt = {version = "0.3", default-features = false }
+clap = { version = "3", features = ["derive"] }
 anyhow = "1"
 syn = "1"
 quote = "1"
