aya-gen cli rework (#297)
* update aya-gen from structopt to clap 3

* aya-gen: add --header option

* aya-gen: run bindgen as a child process

* aya-gen: add support for passing additional bindgen args

--- a/aya-gen/Cargo.toml
+++ b/aya-gen/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2018"
 
 [dependencies]
 bindgen = "0.60"
-structopt = {version = "0.3", default-features = false }
+clap = { version = "3", features = ["derive"] }
 anyhow = "1"
 thiserror = "1"
 syn = "1"
 quote = "1"
 proc-macro2 = "1"
 indexmap = "1.6"
+tempfile = "3"
