--- a/.github/workflows/build-aya.yml
+++ b/.github/workflows/build-aya.yml
@@ -15,16 +15,31 @@ env:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        arch:
+          - x86_64-unknown-linux-gnu
+          - aarch64-unknown-linux-gnu
+          - armv7-unknown-linux-gnueabi
+          - riscv64gc-unknown-none-elf
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: Swatinem/rust-cache@v1
+      - name: Prereqs
+        run: cargo install cross --git https://github.com/cross-rs/cross
 
       - name: Build
-        run: cargo build --verbose
+        run: cross build --verbose
 
-      - name: Run tests
-        run: RUST_BACKTRACE=full cargo test --verbose
+      - name: Run test
+        run: RUST_BACKTRACE=full cross test --verbose
+
+      - name: Build bpf macros
+        run: cross build --manifest-path ./bpf/Cargo.toml -p aya-bpf-macros --verbose
+
+      - name: Test bpf macros
+        run: RUST_BACKTRACE=full cross test --manifest-path ./bpf/Cargo.toml -p aya-bpf-macros --verbose
 
   test:
     runs-on: ubuntu-20.04
