--- a/.github/workflows/build-aya-bpf.yml
+++ b/.github/workflows/build-aya-bpf.yml
@@ -21,7 +21,8 @@ jobs:
           - x86_64
           - aarch64
           - arm
-          - riscv64
+          # Disable riscv64 due to missing pt_regs handling in aya-bpf/args.rs
+          # - riscv64
     runs-on: ubuntu-20.04
 
     steps:
