xtask: Fix docs generation
Publish user/kernel space docs seperately.
Add an index.html at the root for navigation.
Ensure that search engines don't index these pages.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,3 @@
 [build]
-  publish = "target/doc"
+  publish = "site"
   command = "rustup toolchain install nightly && cargo xtask docs"
-
-[[redirects]]
-  from = "/"
-  to = "/aya"
