aya: Implement USDT probes
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/build-aya.yml
+++ b/.github/workflows/build-aya.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           RUST_BACKTRACE: full
         run: |
-          cross test --verbose --target ${{matrix.arch}}
+          cross test --verbose --target ${{matrix.arch}} --all-features
 
   test:
     runs-on: ubuntu-20.04
