--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -21,6 +21,7 @@ parking_lot = { version = "0.12.0", features = ["send_guard"] }
 tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net"], optional = true }
 async-io = { version = "1.3", optional = true }
 log = "0.4"
+aya-common = { version = "0.1.0", path = "../aya-common", features = ["user"] }
 
 [dev-dependencies]
 matches = "0.1.8"
