aya: Implement USDT probes
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/build-aya.yml
+++ b/.github/workflows/build-aya.yml
@@ -33,7 +33,7 @@ jobs:
         run: cross build --verbose
 
       - name: Run test
-        run: RUST_BACKTRACE=full cross test --verbose
+        run: RUST_BACKTRACE=full cross test --verbose --all-features
 
   test:
     runs-on: ubuntu-20.04
