--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net
 async-std = { version = "1.9.0", optional = true }
 async-io = { version = "1.3", optional = true }
 log = "0.4"
+aya-common = { version = "0.1.0", path = "../aya-common", features = ["user"] }
 
 [dev-dependencies]
 matches = "0.1.8"
