aya-bpf: Implement USDT programs
Since these programs require that a few maps are created, we hide this
behind a feature since otherwise the maps will get created regardless of
the program type.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/aya-bpf-macros/Cargo.toml
+++ b/aya-bpf-macros/Cargo.toml
@@ -13,4 +13,4 @@ quote = "1.0"
 syn = {version = "1.0", features = ["full"]}
 
 [dev-dependencies]
-aya-bpf = { path = "../bpf/aya-bpf" }
+aya-bpf = { path = "../bpf/aya-bpf", features = ["usdt"] }
