--- a/bpf/aya-bpf-macros/Cargo.toml
+++ b/bpf/aya-bpf-macros/Cargo.toml
@@ -13,4 +13,4 @@ quote = "1.0"
 syn = {version = "1.0", features = ["full"]}
 
 [dev-dependencies]
-aya-bpf = { path = "../aya-bpf" }
+aya-bpf = { path = "../aya-bpf", features = ["usdt"] }
