test: Replace RTF with Rust
This commit replaces the existing RTF test runner with a simple rust
binary package called - integration-test.

integration-test depends on integration-ebpf, which contains test eBPF
code written in Rust and C. `cargo xtask build-integration-test-ebpf`
can be used to build this code and supress rust-analyzer warnings. It
does require `bpf-linker`, but that is highly likely to be available to
developers of Aya. It also requires a checkout of `libbpf` to extract
headers like bpf-helpers.h.

Since everything is compiled into a single binary, it can be run
be run locally using `cargo xtask integration-test` or remotely using
`./run.sh` which re-uses the bash script from the old test framework
to spawn a VM in which to run the tests.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/build-aya.yml
+++ b/.github/workflows/build-aya.yml
@@ -38,14 +38,35 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     needs: build
-    container:
-      image: ghcr.io/aya-rs/aya-test-rtf:main
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+        with:
+          repository: libbpf/libbpf
+          path: libbpf
 
-      - name: Run regression tests
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          components: rustfmt, clippy, rust-src
+          target: x86_64-unknown-linux-musl
+          override: true
+
+      - uses: Swatinem/rust-cache@v1
+
+      - name: Install Pre-requisites
         run: |
-          ln -s /root/.rustup ${HOME}/.rustup
-          cd test
-          rtf -vvv run
+          sudo apt-get -qy install linux-tools-common qemu-system-x86 cloud-image-utils openssh-client libelf-dev gcc-multilib
+          cargo install bpf-linker
+
+
+      - name: Lint integration tests
+        run: |
+          cargo xtask build-integration-test-ebpf --libbpf-dir ./libbpf
+          cargo clippy -p integration-test -- --deny warnings
+          cargo clippy -p integration-test-macros -- --deny warnings
+
+      - name: Run integration tests
+        run: |
+          (cd test && ./run.sh ../libbpf)
