--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -11,7 +11,9 @@ documentation = "https://docs.rs/aya"
 edition = "2018"
 
 [dependencies]
+addr2line = { version = "0.18", features = ["std-object"] }
 libc = { version = "0.2.105" }
+lru-cache = "0.1.2"
 thiserror = "1"
 object = { version = "0.29", default-features = false, features = ["std", "read_core", "elf"] }
 bitflags = "1.2.1"
