Re-organize into a single workspace
This commit moves the aya-log projects from the subtree and adds them to
the main cargo workspace. It also brings the BPF crates into the
workspace and moves the macro crates up a level since they aren't BPF
code.

Miri was disabled for aya-bpf as the previous config wasn't actually
checking anything.

CI, clippy, fmt and release configurations have all been adjusted
appropriately.

CI was not properly running for other supported arches which was also
ixed here.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.github/workflows/build-aya-bpf.yml
+++ b/.github/workflows/build-aya-bpf.yml
@@ -31,59 +31,19 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
+          components: rust-src
           override: true
 
       - uses: Swatinem/rust-cache@v1
 
       - name: Prereqs
-        run: cargo install cross --git https://github.com/cross-rs/cross
+        run: cargo install bpf-linker
 
       - name: Build
         env:
           CARGO_CFG_BPF_TARGET_ARCH: ${{ matrix.arch }}
         run: |
-          pushd bpf
-          cargo build --workspace --exclude aya-bpf-macros --verbose
-          popd
-
-      - name: Run tests
-        env:
-          CARGO_CFG_BPF_TARGET_ARCH: ${{ matrix.arch }}
-        run: |
-          pushd bpf
-          cargo test --workspace --exclude aya-bpf-macros --verbose
-          popd
-
-  build-macros:
-    strategy:
-      matrix:
-        arch:
-          - x86_64-unknown-linux-gnu
-          - aarch64-unknown-linux-gnu
-          - armv7-unknown-linux-gnueabi
-          - riscv64gc-unknown-none-elf
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-
-      - uses: Swatinem/rust-cache@v1
-
-      - name: Prereqs
-        run: cargo install cross --git https://github.com/cross-rs/cross
-
-      - name: Build bpf macros
-        run: |
-          pushd bpf
-          cross build -p aya-bpf-macros --verbose
-          popd
-
-      - name: Test bpf macros
-        run: |
-          pushd bpf
-          RUST_BACKTRACE=full cross test -p aya-bpf-macros --verbose
-          popd
+          cargo build-bpfel -p aya-bpf --verbose
+          cargo build-bpfeb -p aya-bpf --verbose
+          cargo build-bpfel -p aya-log-ebpf --verbose
+          cargo build-bpfeb -p aya-log-ebpf --verbose
