--- a/bpf/aya-log-ebpf/Cargo.toml
+++ b/bpf/aya-log-ebpf/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
+aya-bpf = { path = "../aya-bpf" }
 aya-log-common = { path = "../../aya-log-common" }
-aya-log-ebpf-macros = { path = "../aya-log-ebpf-macros" }
+aya-log-ebpf-macros = { path = "../../aya-log-ebpf-macros" }
 
 [lib]
 path = "src/lib.rs"
