--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,7 @@
 [alias]
 xtask = "run --package xtask --"
+build-bpfel = "build -Zbuild-std=core --target=bpfel-unknown-none"
+build-bpfeb = "build -Zbuild-std=core --target=bpfeb-unknown-none"
 
 [target.armv7-unknown-linux-gnueabi]
 linker = "arm-linux-gnueabi-gcc"
