--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -20,7 +20,7 @@ bytes = "1.1"
 tokio = { version = "1.2.0" }
 
 [dev-dependencies]
-simplelog = "0.12"
+env_logger = "0.9"
 testing_logger = "0.1.1"
 
 [lib]
