--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -14,4 +14,4 @@ libc = { version = "0.2.105" }
 log = "0.4"
 object = { version = "0.29", default-features = false, features = ["std", "read_core", "elf"] }
 regex = "1"
-simplelog = "0.12"
+env_logger = "0.9"
