--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -11,12 +11,12 @@ documentation = "https://docs.rs/aya-log"
 edition = "2021"
 
 [dependencies]
-aya = { path = "../aya", version = "0.11.0", features=["async_tokio"] }
+aya = { path = "../aya", version = "0.11.0" }
 aya-log-common = { path = "../aya-log-common", version = "0.1.12-dev.0", features=["userspace"] }
 thiserror = "1"
 log = "0.4"
 bytes = "1.1"
-tokio = { version = "1.2.0" }
+tokio = { version = "1.2.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.9"
@@ -24,3 +24,6 @@ testing_logger = "0.1.1"
 
 [lib]
 path = "src/lib.rs"
+
+[features]
+async_tokio = ["tokio", "aya/async_tokio"]
