--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -18,20 +18,19 @@ bitflags = "1.2.1"
 bytes = "1"
 lazy_static = "1"
 parking_lot = { version = "0.12.0", features = ["send_guard"] }
-futures = { version = "0.3.12", optional = true, default-features = false, features = ["std"] }
 tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net"], optional = true }
-async-std = { version = "1.9.0", optional = true }
 async-io = { version = "1.3", optional = true }
 log = "0.4"
 
 [dev-dependencies]
 matches = "0.1.8"
+futures = { version = "0.3.12", default-features = false, features = ["std"] }
 
 [features]
 default = []
-async = ["futures"]
+async = []
 async_tokio = ["tokio", "async"]
-async_std = ["async-std", "async-io", "async"]
+async_std = ["async-io", "async"]
 
 [package.metadata.docs.rs]
 all-features = true
