--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -18,3 +18,4 @@ object = { version = "0.29", default-features = false, features = ["std", "read_
 regex = "1"
 rtnetlink = "0.11.0"
 futures = "0.3"
+tokio = { version = "^1.0.1", features = ["full"] }
