--- a/release.toml
+++ b/release.toml
@@ -1,3 +1,3 @@
-pre-release-commit-message = "{crate_name}: release version {{version}}"
-post-release-commit-message = "{crate_name}: start next development iteration {{next_version}}"
+pre-release-commit-message = "{{crate_name}}: release version {{version}}"
+post-release-commit-message = "{{crate_name}}: start next development iteration {{next_version}}"
 consolidate-commits = true
