--- a/aya-log-common/Cargo.toml
+++ b/aya-log-common/Cargo.toml
@@ -14,7 +14,7 @@ default = []
 userspace = [ "aya" ]
 
 [dependencies]
-aya = { path = "../aya", version = "0.11.0", optional=true }
+aya = { version = "0.11.0", optional=true }
 num_enum = { version = "0.5", default-features = false }
 
 [lib]
