--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aya-log"
-version = "0.1.12-dev.0"
+version = "0.1.13"
 description = "A logging library for eBPF programs."
 keywords = ["ebpf", "bpf", "log", "logging"]
 license = "MIT OR Apache-2.0"
@@ -12,7 +12,7 @@ edition = "2021"
 
 [dependencies]
 aya = { version = "0.11.0", features=["async_tokio"] }
-aya-log-common = { path = "../aya-log-common", version = "0.1.12-dev.0", features=["userspace"] }
+aya-log-common = { path = "../aya-log-common", version = "0.1.13", features=["userspace"] }
 thiserror = "1"
 log = "0.4"
 bytes = "1.1"
