--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -11,7 +11,7 @@ documentation = "https://docs.rs/aya-log"
 edition = "2021"
 
 [dependencies]
-aya = { version = "0.11.0", features=["async_tokio"] }
+aya = { path = "../aya", version = "0.11.0", features=["async_tokio"] }
 aya-log-common = { path = "../aya-log-common", version = "0.1.13", features=["userspace"] }
 thiserror = "1"
 log = "0.4"
