--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -18,3 +18,4 @@ log = "0.4"
 object = { version = "0.30", default-features = false, features = ["std", "read_core", "elf"] }
 rbpf = "0.1.0"
 regex = "1"
+tempfile = "3.3.0"
