aya-obj: migrate aya::obj into a separate crate
To split the crate into two, several changes were made:
1. Most `pub(crate)` are now `pub` to allow access from Aya;
2. Parts of BpfError are merged into, for example, RelocationError;
3. BTF part of Features is moved into the new crate;
4. `#![deny(missing_docs)]` is removed temporarily;
5. Some other code gets moved into the new crate, mainly:
   - aya::{bpf_map_def, BtfMapDef, PinningType},
   - aya::programs::{CgroupSock*AttachType},

The new crate is currenly allowing missing_docs. Member visibility
will be adjusted later to minimize exposure of implementation details.

Refs: #473

--- a/aya-obj/Cargo.toml
+++ b/aya-obj/Cargo.toml
@@ -11,3 +11,10 @@ documentation = "https://docs.rs/aya-obj"
 edition = "2021"
 
 [dependencies]
+bytes = "1"
+log = "0.4"
+object = { version = "0.30", default-features = false, features = ["std", "read_core", "elf"] }
+thiserror = "1"
+
+[dev-dependencies]
+matches = "0.1.8"
