aya-obj: update documentation and versioning info
- Set the version number of `aya-obj` to `0.1.0`.
- Update the description of the `aya-obj` crate.
- Add a section in README and rustdoc warning about the unstable API.

--- a/aya-obj/Cargo.toml
+++ b/aya-obj/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "aya-obj"
-version = "0.11.0"
-description = "A library for loading and relocating eBPF object files"
-keywords = ["ebpf", "bpf", "linux", "kernel"]
+version = "0.1.0"
+description = "An eBPF object file parsing library with BTF and relocation support."
+keywords = ["ebpf", "bpf", "btf", "elf", "object"]
 license = "MIT OR Apache-2.0"
 authors = ["The Aya Contributors"]
 repository = "https://github.com/aya-rs/aya"
