--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -19,3 +19,4 @@ object = { version = "0.30", default-features = false, features = ["std", "read_
 rbpf = "0.1.0"
 regex = "1"
 tempfile = "3.3.0"
+libtest-mimic = "0.6.0"
