--- a/.github/workflows/build-aya.yml
+++ b/.github/workflows/build-aya.yml
@@ -57,7 +57,7 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2023-01-10
+          toolchain: nightly
           components: rustfmt, clippy, rust-src
           target: x86_64-unknown-linux-musl
           override: true
