--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -19,6 +19,10 @@ which = { workspace = true }
 xtask = { path = "../../xtask" }
 
 [[bin]]
+name = "args"
+path = "src/args.rs"
+
+[[bin]]
 name = "bpf_probe_read"
 path = "src/bpf_probe_read.rs"
 
