ebpf: Call `bpf_probe_read` on `*const T` BTF arguments
It's necessary to call `bpf_probe_read` not only for pointers retrieved
from `PtRegs`, but also from BTF arguments.

`bpf_probe_read` might return an error, so the return type of `.arg()`
methods in contexts handling BTF arguments changes from `T` to
`Option<T>`. `None` is returned when `bpf_probe_read` call is not
successful.

Fixes: #542

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -26,6 +26,10 @@ name = "log"
 path = "src/log.rs"
 
 [[bin]]
+name = "args"
+path = "src/args.rs"
+
+[[bin]]
 name = "map_test"
 path = "src/map_test.rs"
 
