Cargo.toml: suppress resolver warning on nightly
```
warning: some crates are on edition 2021 which defaults to `resolver = "2"`, but virtual workspaces default to `resolver = "1"`
```

--- a/bpf/aya-bpf-cty/Cargo.toml
+++ b/bpf/aya-bpf-cty/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 authors = ["Jorge Aparicio <jorge@japaric.io>"]
+edition = "2021"
 categories = ["embedded", "external-ffi-bindings" ,"no-std"]
 description = "Type aliases to C types like c_int for use with bindgen"
 documentation = "https://docs.rs/cty"
